--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,16 @@
+language: ruby
 script: "bundle exec rake test"
 notifications:
-  disabled: true
+  email:
+    recipients:
+      - engineering@site5.com
+    on_success: never
+    on_failure: always
 rvm:
   - 1.8.7
   - 1.9.2
   - 1.9.3
   - ree
-  - rbx
-  - rbx-head
-  - jruby
+  - rbx-18mode
+  - jruby-18mode
+  - jruby-19mode
