--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,14 @@ notifications:
   email:
     recipients:
       - engineering@site5.com
-    on_success: never
+    on_success: always
     on_failure: always
 rvm:
   - 1.8.7
   - 1.9.2
   - 1.9.3
   - ree
+  - rbx-head
   - rbx-18mode
   - jruby-18mode
   - jruby-19mode
